--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -13,8 +13,9 @@
 	<meta name="application-name" content="{{ website_branding.name }}">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
+	<link rel="preconnect" href="https://rsms.me/">
+	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 	<link rel="stylesheet" href="/assets/css/finalium.css" type="text/css">
-	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="/assets/common.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +27,7 @@
 	{% block customcss %}{% endblock %}
 	</style>
 </head>
-<body>
+<body class="with-fixed-top-navbar">
 {% include "components/_header_bs3.twig" %}
 {% block precontent %}{% endblock %}
 <div class="container page-container">
