--- a/private/templates/sbnext-common/components/videolist.twig
+++ b/private/templates/sbnext-common/components/videolist.twig
@@ -1,7 +1,7 @@
 {% for video in videos %}
     {{ small_video_box(video) }}
 {% endfor %}
-<div class="center">
+<div class="text-center">
     <div class="btn btn-default" onclick="showMoreVideos()" id="fromUser">
         {{ __("More") }}
     </div>
