--- a/private/templates/sbnext-common/components/_header_bs3.twig
+++ b/private/templates/sbnext-common/components/_header_bs3.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-blur navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -8,7 +8,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.php">openSB</a>
+            <a class="navbar-brand" href="/index.php">
+                <img class="navbar-logo" src="{{ website_branding.assets_location }}/logo-wordmark.png" alt="{{ website_branding.name }}">
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
