--- a/private/templates/sbnext-common/components/smallvideobox.twig
+++ b/private/templates/sbnext-common/components/smallvideobox.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-4">
-        <a href="watch.php?v={{ data.video_id }}">
+        <a href="watch.php?v={{ data.video_id }}" class="thumbnail">
         {% if data.post_type == 0 %}
             <img class="img-responsive" src="{{ video_thumbnail(data.video_id) }}" alt="{{ data.title }}">
         {% elseif data.post_type == 2 %}
@@ -8,8 +8,8 @@
         {% endif %}
         </a>
     </div>
-    <div class="col-md-12 vid-info">
-        <h3 class="title"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
+    <div class="col-md-12" style="padding-left: 0;">
+        <h4 style="margin-top: 0;"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h4>
         <span class="stat">{{ __("by") }} {{ userlink(data, 'u_') }} {% if data.u_powerlevel > 1 %}{{ icon("shield", 14) }}{% endif %} &bull; {{ data.views }} {{ __("views") }}</span>
         <!-- <span class="stat">{{ video_length(data) }}</span> -->
     </div>
