--- a/private/templates/sbnext-common/login.twig
+++ b/private/templates/sbnext-common/login.twig
@@ -1,35 +1,37 @@
-{% extends "_layout_chaziz.twig" %}
+{% extends "_layout.twig" %}
 
 {% block title %}{{ __("Login") }}{% endblock %}
 
 	{% block content %}
         {% if error %}
             <div class="alert alert-danger" role="alert">{{ error }}</div>
-			<br>
+            <br>
         {% elseif resetted %}
             <div class="alert alert-success"
                  role="alert">{{ __("Password successfully reset! Please login with your new password.") }}</div>
-			<br>
+            <br>
         {% elseif new_pass %}
             <div class="alert alert-success"
                  role="alert">{{ __("Password successfully reset! Please login with your new password.") }}</div>
-			<br>
+            <br>
         {% elseif new_token %}
             <div class="alert alert-success"
                  role="alert">{{ __("You have been successfully logged out of all devices.") }}</div>
-			<br>
+            <br>
         {% endif %}
 
-        <div class="row">
-            <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
-                <h2 class="form-signin-heading">{{ __("Login") }}</h2>
-                <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
-                <input type="password" name="password" class="form-control" placeholder="{{ __("Password") }}">
-                <br>
-                <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}"
-                       name="loginsubmit">
-                <br>
-				<p>{{ __("Don't have an account?") }} <a href="./register.php">{{ __("Register") }}</a>
-            </form>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
+                    <h2 class="form-signin-heading">{{ __("Login") }}</h2>
+                    <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
+                    <input type="password" name="password" class="form-control" placeholder="{{ __("Password") }}">
+                    <br>
+                    <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}"
+                           name="loginsubmit">
+                    <br>
+                    <p>{{ __("Don't have an account?") }} <a href="./register.php">{{ __("Register") }}</a>
+                </form>
+            </div>
         </div>
     {% endblock %}
