--- a/private/templates/sbnext-common/register.twig
+++ b/private/templates/sbnext-common/register.twig
@@ -1,4 +1,4 @@
-{% extends "_layout_chaziz.twig" %}
+{% extends "_layout.twig" %}
 
 {% block title %}{{ __("Register") }}{% endblock %}
 
@@ -6,20 +6,22 @@
 
     {% if error %}
         <div class="alert alert-danger" role="alert">{{ error }}</div>
-		<br>
+        <br>
     {% endif %}
-    <div class="row">
-        <form method="post" name="loginForm" id="loginForm" action="register.php" class="form-signin">
-            <h2 class="form-signin-heading">{{ __("Register") }}</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form method="post" name="loginForm" id="loginForm" action="register.php" class="form-signin">
+                <h2 class="form-signin-heading">{{ __("Register") }}</h2>
 
-            <input type="text" name="email" class="form-control" placeholder="{{ __("Email") }}">
-            <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
+                <input type="text" name="email" class="form-control" placeholder="{{ __("Email") }}">
+                <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
 
-            <input type="password" name="pass1" class="form-control" placeholder="{{ __("Password") }}">
-            <input type="password" name="pass2" class="form-control" placeholder="{{ __("Confirm Password") }}">
+                <input type="password" name="pass1" class="form-control" placeholder="{{ __("Password") }}">
+                <input type="password" name="pass2" class="form-control" placeholder="{{ __("Confirm Password") }}">
 
-            <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Register") }}"
-                   name="registersubmit">
-        </form>
+                <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Register") }}"
+                       name="registersubmit">
+            </form>
+        </div>
     </div>
 {% endblock %}
