--- a/private/templates/sbnext-common/search.twig
+++ b/private/templates/sbnext-common/search.twig
@@ -3,16 +3,13 @@
 {% block title %}{{ query }}{% endblock %}
 
 	{% block content %}
-        <h1>{{ query }}</h1>
+        <div class="page-header">
+            <h1>{{ query }}</h1>
+        </div>
         {% for video in videos %}
             {{ small_video_box(video) }}
         {% else %}
-            <div class="bg-dark"
-                 style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
-                <h2>{{ __("There are no submissions that match your query.") }}</h2>
-                <div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png"
-                                                                style="max-width:150px;" alt="{{ website_branding.name }}"></div>
-            </div>
+            <div class="alert alert-danger" role="alert">{{ __("There are no submissions that match your query.") }}</div>
         {% endfor %}
 
         {% if type == 'all' %}
