--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -16,75 +16,80 @@
     </script>
 {% endblock %}
 {% block content %}
+    {% if edited %}
+        <div class="alert alert-success">{{ __("Settings successfully saved!") }}</div>
+    {% endif %}
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-2 col-sm-3 col-xs-4">
+                    <img class="rounded img-responsive" src="{{ profile_image(userpagedata.name) }}" alt="{{ userpagedata.name }}">
+                </div>
+                <div class="col-md-14 col-sm-13 col-xs-12">
+                    <h1 style="margin: 0">{{ userpagedata.title }}{% if userpagedata.powerlevel > 1 %}{{ icon("shield", 20) }}{% endif %}
+                    </h1>
+                    <p>@{{ userpagedata.name }}
+                        {# hack to prevent twig from outputing the number 1 #}
+                        {% if subCount != 1 %}
+                            {% set pluralSubscribers = __("s") %}
+                        {% endif %}
+                        &bull; {{ __("%s follower%s", [subCount ?? __("no"), pluralSubscribers]) }}
+                    </p>
+                    <p>{{ userpagedata.about | markdown }}</p>
+                </div>
+                <div class="col-md-2 right">
+                    {% if userpagedata.id != userdata.id %}
+                        <button id="subscribe" class="btn btn-{% if subscribed %}secondary{% else %}primary{% endif %}"
+                                type="button"
+                                {% if not log %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
     {% if userbandata != true %}
         {% if userpagedata.id == userdata.id and not forceuser %}
-            <div class="bg-neutral" style="padding:1px 15px;">
-                <p class="center"><a href="settings.php">{{ __("Edit my settings") }}</a>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <a href="settings.php">{{ __("Edit my settings") }}</a>
                     &bull; <a href="user.php?id={{ id }}&forceuser">{{ __("View user page as viewer") }}</a>
                     {% if userpagedata.powerlevel > 2 %}
-                    &bull; <a href="/admin">{{ __("Admin panel") }}</a>
+                        &bull; <a href="/admin">{{ __("Admin panel") }}</a>
                     {% endif %}
-                </p>
+                </div>
             </div>
         {% endif %}
     {% endif %}
-    <div class="bg-neutral" style="padding: 15px 10px;">
-        <div class="row">
-            <div class="col-md-1">
-                <img class="rounded img-responsive" src="{{ profile_image(userpagedata.name) }}" alt="{{ userpagedata.name }}">
-            </div>
-            <div class="col-md-13">
-                <h1 style="margin: 0">{{ userpagedata.title }}{% if userpagedata.powerlevel > 1 %}{{ icon("shield", 20) }}{% endif %}
-                </h1>
-                <p>@{{ userpagedata.name }}
-                    {# hack to prevent twig from outputing the number 1 #}
-                    {% if subCount != 1 %}
-                        {% set pluralSubscribers = __("s") %}
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-10">
+                    {% for latestVideo in latestVideos %}
+                        {{ small_video_box(latestVideo) }}
+                    {% else %}
+                        <p>{{ __("There are currently no posts by %s.", [userpagedata.title]) }}</p>
+                    {% endfor %}
+                    {% if userdata.id == id %}
+                        {% set forceuser = "&forceuser" %}
+                    {% else %}
+                        {% set forceuser = "" %}
                     {% endif %}
-                    {% if views != 1 %}
-                        {% set pluralViews = __("s") %}
-                    {% endif %}
-                    &bull; {{ __("%s follower%s", [subCount ?? __("no"), pluralSubscribers]) }}
-                    &bull; {{ __("%s view%s", [views ?? __("no"), pluralViews]) }}
-                </p>
-            </div>
-            <div class="col-md-2 right">
-                {% if userpagedata.id != userdata.id %}
-                    <button id="subscribe" class="btn btn-{% if subscribed %}secondary{% else %}primary{% endif %}"
-                            type="button"
-                            {% if not log %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
-                {% endif %}
+                    {% set le_url = 'user.php?id=' ~ id ~ '&page=%s' ~ forceuser %}
+                    {{ pagination(level_count, glob_lpp, le_url, page) }}
+                </div>
+                <div class="col-md-6">
+                    <h2></h2>
+                    <div class="user_about">
+                        <h3>{{ __("About %s", [ userpagedata.title ]) }}</h3>
+                        <p><strong>{{ __("Registered on") }}</strong>: {{ userpagedata.joined | date('Y-m-d H:i:s') }}</p>
+                        <p><strong>{{ __("Last logged in") }}</strong>: {{ userpagedata.lastview | relative_time }}</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-        <div class="col-md-4">
-            {% if markread %}
-                <div class="alert alert-success">{{ __("Marked all notifications as read.") }}</div>
-            {% elseif edited %}
-                <div class="alert alert-success">{{ __("Settings successfully saved!") }}</div>
-            {% endif %}
-            <h2></h2>
-            <div class="user_about">
-                <h3>{{ __("About %s", [ userpagedata.title ]) }}</h3>
-                {{ userpagedata.about | markdown }}
-                <p><strong>{{ __("Registered on") }}</strong>: {{ userpagedata.joined | date('Y-m-d H:i:s') }}</p>
-                <p><strong>{{ __("Last logged in") }}</strong>: {{ userpagedata.lastview | relative_time }}</p>
-            </div>
-        </div>
-        <div class="col-md-12">
-            {% for latestVideo in latestVideos %}
-                {{ small_video_box(latestVideo) }}
-            {% else %}
-                <p>{{ __("There are currently no posts by %s.", [userpagedata.title]) }}</p>
-            {% endfor %}
-            {% if userdata.id == id %}
-                {% set forceuser = "&forceuser" %}
-            {% else %}
-                {% set forceuser = "" %}
-            {% endif %}
-            {% set le_url = 'user.php?id=' ~ id ~ '&page=%s' ~ forceuser %}
-            {{ pagination(level_count, glob_lpp, le_url, page) }}
-            <div class="panel  panel-body">
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
             {% if log %}
                 <div class="row" id="commentField">
                     <div class="col-md-16">
@@ -103,8 +108,6 @@
             {% for comment in comments %}
                 {{ comment(comment) }}
             {% endfor %}
-            </div>
         </div>
     </div>
-</div>
 {% endblock %}
