ui tweaks, remove sounds, fix replies!!!

--- a/private/templates/sbnext-common/components/artwork.twig
+++ b/private/templates/sbnext-common/components/artwork.twig
@@ -1,1 +1,1 @@
-<img class="img-responsive" src="{{ video.file }}" alt="{{ video.title }}">
+<img class="img-responsive center-block" src="{{ video.file }}" alt="{{ video.title }}">
