--- a/private/templates/sbnext-common/browse.twig
+++ b/private/templates/sbnext-common/browse.twig
@@ -6,7 +6,7 @@
         <h1>{{ title }}</h1>
         <div class="row">
             <div class="panel panel-default">
-                <ul class="nav nav-pills nav-justified">
+                <ul class="nav nav-pills">
                     <li {% if type=='recent' %}class="active" {% endif %}><a
                                 href="browse.php?type=recent">{{ __("Most recent") }}</a></li>
                     <li {% if type=='popular' %}class="active" {% endif %}><a
