--- a/private/templates/sbnext-common/components/_header_bs3.twig
+++ b/private/templates/sbnext-common/components/_header_bs3.twig
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-blur navbar-fixed-top">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar" aria-expanded="false">
+                <span class="sr-only">{{ __("Toggle navigation") }}</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -14,7 +13,7 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="nav navbar-nav">
                 {% for link in navigationList %}
                     <li><a href="{{ link.url }}">{{ link.name }}</a></li>
@@ -24,13 +23,23 @@
                 <div class="form-group">
                     <input type="text" class="form-control" name="tags" placeholder="Search">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default"><span>{{ icon("search", 16) }}</span></button>
             </form>
             <ul class="nav navbar-nav navbar-right">
                 {% if log %}
-                    <li><a href="/upload.php">Upload</a></li>
-                    <li><a href="/settings.php">Settings</a></li>
-                    <li><a href="/user.php?name={{ userdata.name }}">{{ userdata.name }}</a></li>
+                    <li><a href="/upload.php">{{ __("Upload") }}</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ userdata.name }} <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/user.php?name={{ userdata.name }}">{{ __("Profile") }}</a></li>
+                            <li><a href="/settings.php">{{ __("Settings") }}</a></li>
+                            {% if userdata.powerlevel > 2 %}
+                                <li><a href="/admin.php">{{ __("Admin panel") }}</a></li>
+                            {% endif %}
+                            <li role="separator" class="divider"></li>
+                            <li><a href="logout.php">{{ __("Log out") }}</a></li>
+                        </ul>
+                    </li>
                 {% else %}
                     <li><a href="/login.php">Login</a></li>
                     <li><a href="/register.php">Register</a></li>
