--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -15,112 +15,120 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="panel panel-default">
-                            <div class="stat-title">{{ __("Registered users") }}</div>
-                            {{ stats.usercount }}
+                            <div class="panel-body text-center">
+                                <div class="stat-title">{{ __("Registered users") }}</div>
+                                {{ stats.usercount }}
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="panel panel-default">
-                            <div class="stat-title">{{ __("Submissions") }}</div>
-                            {{ stats.videocount }}
+                            <div class="panel-body text-center">
+                                <div class="stat-title">{{ __("Submissions") }}</div>
+                                {{ stats.videocount }}
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="panel panel-default">
-                            <div class="stat-title">{{ __("Views") }}</div>
-                            {{ stats.viewcount }}
+                            <div class="panel-body text-center">
+                                <div class="stat-title">{{ __("Views") }}</div>
+                                {{ stats.viewcount }}
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="panel panel-default">
-                            <div class="stat-title">{{ __("Comments") }}</div>
-                            {{ stats.commentcount }}
+                            <div class="panel-body text-center">
+                                <div class="stat-title">{{ __("Comments") }}</div>
+                                {{ stats.commentcount }}
+                            </div>
                         </div>
                     </div>
                 </div>
 
-				{% if browser_info.legacy_disable_graph == false %}
-                <h2>{{ __("Graph") }}</h2>
-                <canvas id="myChart"></canvas>
-				{% endif %}
+                {% if browser_info.legacy_disable_graph == false %}
+                    <h2>{{ __("Graph") }}</h2>
+                    <canvas id="myChart"></canvas>
+                {% endif %}
 
             </div>
         </div>
-		
-		{% if browser_info.legacy_disable_graph == false %}
-        <script>
-            const ctx = document.getElementById('myChart').getContext('2d');
-            const myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    datasets: [{
-                        label: 'Submissions',
-                        data: [
-                            {% for graph in video_graph_data %}
-                            {
-                                x: "{{ graph.time }}",
-                                y: {{ graph.runningTotal }},
-                            },
-                            {% endfor %}
-                        ],
-                        backgroundColor: [
-                            'rgba(190, 77, 37, 0.2)',
-                        ],
-                        borderColor: [
-                            'rgba(190, 77, 37, 1)',
-                        ],
-                        borderWidth: 1
-                    },
-                    {
-                        label: 'Users',
-                        data: [
-                            {% for graph in user_graph_data %}
-                            {
-                                x: "{{ graph.joined }}",
-                                y: {{ graph.runningTotal }},
-                            },
-                            {% endfor %}
-                        ],
-                        backgroundColor: [
-                            'rgba(37, 150, 190, 0.2)',
-                        ],
-                        borderColor: [
-                            'rgba(37, 150, 190, 1.0)',
-                        ],
-                        borderWidth: 1
-                    },
-                    {
-                        label: 'Comments',
-                        data: [
-                            {% for graph in comment_graph_data %}
-                            {
-                                x: "{{ graph.date }}",
-                                y: {{ graph.runningTotal }},
-                            },
-                            {% endfor %}
-                        ],
-                        backgroundColor: [
-                            'rgba(37, 190, 135, 0.2)',
-                        ],
-                        borderColor: [
-                            'rgba(37, 190, 135, 1.0)',
-                        ],
-                        borderWidth: 1
-                    },
-                    ]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
+
+        {% if browser_info.legacy_disable_graph == false %}
+            <script>
+                const ctx = document.getElementById('myChart').getContext('2d');
+                const myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        datasets: [{
+                            label: 'Submissions',
+                            data: [
+                                {% for graph in video_graph_data %}
+                                {
+                                    x: "{{ graph.time }}",
+                                    y: {{ graph.runningTotal }},
+                                },
+                                {% endfor %}
+                            ],
+                            backgroundColor: [
+                                'rgba(190, 77, 37, 0.2)',
+                            ],
+                            borderColor: [
+                                'rgba(190, 77, 37, 1)',
+                            ],
+                            borderWidth: 1
                         },
-                        x: {
-                            type: 'time',
-                            min: '2021-01-30 00:00:00',
+                            {
+                                label: 'Users',
+                                data: [
+                                    {% for graph in user_graph_data %}
+                                    {
+                                        x: "{{ graph.joined }}",
+                                        y: {{ graph.runningTotal }},
+                                    },
+                                    {% endfor %}
+                                ],
+                                backgroundColor: [
+                                    'rgba(37, 150, 190, 0.2)',
+                                ],
+                                borderColor: [
+                                    'rgba(37, 150, 190, 1.0)',
+                                ],
+                                borderWidth: 1
+                            },
+                            {
+                                label: 'Comments',
+                                data: [
+                                    {% for graph in comment_graph_data %}
+                                    {
+                                        x: "{{ graph.date }}",
+                                        y: {{ graph.runningTotal }},
+                                    },
+                                    {% endfor %}
+                                ],
+                                backgroundColor: [
+                                    'rgba(37, 190, 135, 0.2)',
+                                ],
+                                borderColor: [
+                                    'rgba(37, 190, 135, 1.0)',
+                                ],
+                                borderWidth: 1
+                            },
+                        ]
+                    },
+                    options: {
+                        scales: {
+                            y: {
+                                beginAtZero: true
+                            },
+                            x: {
+                                type: 'time',
+                                min: '2021-01-30 00:00:00',
+                            }
                         }
                     }
-                }
-            });
-        </script>
-		{% endif %}
+                });
+            </script>
+        {% endif %}
     {% endblock %}
