--- a/private/templates/sbnext-common/watch.twig
+++ b/private/templates/sbnext-common/watch.twig
@@ -20,11 +20,10 @@
          {% endif %}
          <div class="panel panel-default">
             <div class="panel-body">
-               <div class="page-header">
-                  <h1>{{ video.title }}</h1>
-               </div>
+               <h3 style="margin-top: 0;">{{ video.title }}</h3>
+               <p>{{ __("%s views", [viewCount]) }}</p>
                <div class="row">
-                  <div class="col-md-8">
+                  <div class="col-md-8 col-xs-8">
                      <img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
                      <a href="user.php?name={{ video.u_name }}" style="color:{{ video.u_customcolor }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a> • {{ subCount }} followers
                      <br>
@@ -33,7 +32,7 @@
                      {% endif %}
                      <br>
                   </div>
-                  <div class="col-md-8 text-right">
+                  <div class="col-md-8 col-xs-8 text-right">
                      <div style="margin-top:-9px;">
                         <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
                                 class="btn {% if rating == 1 %}btn-success{% else %}btn-default{% endif %}">
@@ -55,22 +54,28 @@
          </div>
          <div class="panel panel-default">
             <div class="panel-body">
-               <p><b>{{ __("%s views", [viewCount]) }}</b></p>
-               <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
+               <p><b>{{ __("Submitted %s on %s", [video.time | relative_time, video.time | date('F j, Y')]) }}</b></p>
+               {% if video.description|trim is not empty %}
                <p>{{ video.description | markdown }}</p>
+               {% else %}
+                  <em class="text-muted">{{ __("This submission has no description.") }}</em>
+               {% endif %}
             </div>
          </div>
          <div class="panel panel-default">
             <div class="panel-body">
                <h3>{{ __("Comments") }} ({{ comCount }})</h3>
                {% if log %}
-                  <div>
-                     <div>
-                     <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
-                               placeholder="{{ __("Enter comment here.") }}"></textarea>
-                     </div>
-                     <div class="text-right">
-                        <button id="post" class="btn btn-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
+                  <div class="row" id="commentField">
+                     <div class="col-md-16">
+                        <div>
+				<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:vertical" rows="3"
+                          placeholder="{{ __("Enter comment here.") }}"></textarea>
+                        </div>
+                        <div class="text-right">
+                           <button id="post" class="btn btn-primary"
+                                   style="margin-bottom:0;">{{ __("Comment") }}</button>
+                        </div>
                      </div>
                   </div>
                {% endif %}
