--- a/finalium/assets/stylesheets/bootstrap/_footer.scss
+++ b/finalium/assets/stylesheets/bootstrap/_footer.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 //
 // Footer
 // --------------------------------------------------
@@ -10,6 +11,16 @@
     height: 4em;
     margin-bottom: 1em;
   }
+}
+
+.footer-sticky {
+  background-color: $footer-bg;
+  border-top: 1px solid $footer-border;
+  padding: math.div($footer-padding, 2);
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+  text-align: center;
 }
 
 // placeholder for finalium js
