--- a/finalium/assets/stylesheets/bootstrap/_variables.scss
+++ b/finalium/assets/stylesheets/bootstrap/_variables.scss
@@ -16,11 +16,32 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
+$brand-default:         #fafafa !default;
 $brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
+
+$colors: () !default;
+$colors: map-merge(
+                (
+                        "default":    $brand-default,
+                        "primary":    $brand-primary,
+                        "success":    $brand-success,
+                        "info":       $brand-info,
+                        "warning":    $brand-warning,
+                        "danger":     $brand-danger,
+                ),
+                $colors
+);
+
+// The yiq lightness value that determines when the lightness of color changes from "dark" to "light". Acceptable values are between 0 and 255.
+$yiq-contrasted-threshold: 150 !default;
+
+// Customize the light and dark text colors for use in our YIQ color contrast function.
+$yiq-text-dark: $gray-dark !default;
+$yiq-text-light: $brand-default !default;
 
 
 //== Scaffolding
