--- a/finalium/assets/stylesheets/bootstrap/mixins/_buttons.scss
+++ b/finalium/assets/stylesheets/bootstrap/mixins/_buttons.scss
@@ -4,25 +4,25 @@
 // and disabled options for all buttons
 
 @mixin button-variant($color, $background, $border) {
-  color: $color;
+  color: color-yiq($background);
   background-color: $background;
   border-color: $border;
 
   &:focus,
   &.focus {
-    color: $color;
+    color: color-yiq($background);;
     background-color: darken($background, 10%);
     border-color: darken($border, 25%);
   }
   &:hover {
-    color: $color;
+    color: color-yiq($background);;
     background-color: darken($background, 10%);
     border-color: darken($border, 12%);
   }
   &:active,
   &.active,
   .open > &.dropdown-toggle {
-    color: $color;
+    color: color-yiq($background);;
     background-color: darken($background, 10%);
     background-image: none;
     border-color: darken($border, 12%);
@@ -30,7 +30,7 @@
     &:hover,
     &:focus,
     &.focus {
-      color: $color;
+      color: color-yiq($background);;
       background-color: darken($background, 17%);
       border-color: darken($border, 25%);
     }
