--- a/finalium/assets/stylesheets/finalium.scss
+++ b/finalium/assets/stylesheets/finalium.scss
@@ -9,6 +9,7 @@
 // Core variables and mixins
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
+@import "bootstrap/functions";
 
 // Reset and dependencies
 @import "bootstrap/normalize";
@@ -58,4 +59,4 @@
 @import "bootstrap/responsive-utilities";
 
 // Gradient theme
-@import "bootstrap/theme";
+// @import "bootstrap/theme";
