--- a/private/templates/sbnext-common/index.twig
+++ b/private/templates/sbnext-common/index.twig
@@ -19,7 +19,7 @@
 				<a class="btn btn-default pull-right" href="browse.php">{{ __("Browse more") }}</a>
 				{% endif %}
 				{% if log %}
-				<h3 style="margin-top:0">{{ __("Your follow's submissions") }}</h3>
+				<h3 style="margin-top:0">{{ __("Submissions from users you follow") }}</h3>
 				{% else %}
 				<h3 style="margin-top:0">{{ __("Randomly selected submissions") }}</h3>
 				{% endif %}
@@ -27,7 +27,7 @@
 					{% for video in subscriptionVideos %}
 						{{ small_video_box(video) }}
 					{% else %}
-						<p>{{ __("Either you're not following anyone, or none of your follows have submissions.") }}</p>
+						<p>{{ __("Either you're not following anyone, or none of the people you follow have made any submissions.") }}</p>
 					{% endfor %}
 				{% else %}
 					{% for video in videos %}
