--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -8,10 +8,10 @@
 	{% block content %}
         <div class="panel panel-default">
             <div class="panel-body">
-                <div style="padding:5px;">
-                    <h1>{{ __("About %s", [ website_branding.name ]) }}</h1>
-                    <p>{{ __("Some statistics may not be accurate.") }}</p>
+                <div class="page-header">
+                <h1>{{ __("About %s", [ website_branding.name ]) }}</h1>
                 </div>
+                <div class="alert alert-info">{{ __("Please note that some statistics may not be accurate due to deleted submissions or leftover data in the database.") }}</div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="panel panel-default">
